DeploymentConfig.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: centos-httpd
spec:
  template:
    metadata:
      labels:
        name: centos-httpd
    spec:
      containers:
      - name: centos-httpd-latest
        image: centos-httpd:latest
        ports:
        - containerPort: 8080
          protocol: TCP
  replicas: 1
  selector:
    name: centos-httpd
  triggers:
  - type: ImageChange
    imageChangeParams:
      automatic: true
      containerNames:
      - centos-httpd-latest
      from:
        kind: ImageStreamTag
        name: centos-httpd:latest
  - type: ConfigChange
