Service.yml
apiVersion: v1
kind: Service
metadata:
  name: centos-httpd
spec:
  ports:
  - name: 8080-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    deploymentconfig: centos-httpd
