Route.yml
apiVersion: v1
kind: Route
metadata:
  name: centos-httpd-route
spec:
  to:
    kind: Service
    name: centos-httpd
